k8s/istio/istio_PeerAuthentication.yaml
# PeerAuthentication配置，定义服务间通信的认证策略
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system
spec:
  mtls:
    mode: STRICT

---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: couponkill
spec:
  mtls:
    mode: STRICT
