k8s/istio/istio_config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: couponkill
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
