k8s/istio/istio_gateway.yaml
# Gateway资源定义，用于配置Istio入口网关
# 该资源创建一个名为couponkill-gateway的网关，监听80和443端口
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: couponkill-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    # HTTP服务器配置
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
    # HTTPS服务器配置
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: couponkill-credential
      hosts:
        - "*"
