k8s/istio/istio_Sidecar.yaml
# Sidecar资源配置，优化服务间通信
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
  namespace: couponkill
spec:
  egress:
  - hosts:
    - "./*"
    - "istio-system/*"
  ingress:
  - port:
      number: 8090
      protocol: HTTP
      name: seckill-go
    defaultEndpoint: 0.0.0.0:8090
  - port:
      number: 8082
      protocol: HTTP
      name: order-service
    defaultEndpoint: 0.0.0.0:8082
  - port:
      number: 8081
      protocol: HTTP
      name: coupon-service
    defaultEndpoint: 0.0.0.0:8081
  - port:
      number: 8083
      protocol: HTTP
      name: user-service
    defaultEndpoint: 0.0.0.0:8083
